Fix UI handling of reports spanning multiple files
* Add random generation of entity, invariant reports
* Add some webapp tests
* Fix entity report render